--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <style>
-                body{
+                body
+                {
                     background-color: #5a636d
                 }
+                .dynamic-image 
+                {
+                    width: 100%;
+                    aspect-ratio: 16 / 9;
+                    object-fit: cover;
+                }
+                .my-text
+                {
+                    color:antiquewhite;
+                    font-family: 'Times New Roman', Times, serif;
+                    font-size: 16px;
+                }
             </style>
+            <link rel="icon" href="images/iconlogo.png">
     </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!--<nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">*</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,17 +48,19 @@
                 </div>
             </div>
         </div>
-    </nav>
+    </nav>-->
     <div class="container-fluid md-12">
-        <img src="Placeholder.png" class="img-fluid w-100" alt="Small World Finder" style="height:200px">
-        <img src="Placeholder.png" class="img-fluid w-100" alt="Small World Finder" style="height:200px">
-        <img src="Placeholder.png" class="img-fluid w-100" alt="Small World Finder" style="height:200px">
+        <img src="images/jovian_1.png" class="img-fluid dynamic-image" alt="Small World Finder" >
+        <img src="images/jovian_2.png" class="img-fluid dynamic-image" alt="Small World Finder" >
+        <img src="images/jovian_3.png" class="img-fluid dynamic-image" alt="Small World Finder" >
+        <img src="images/jovian_4.png" class="img-fluid dynamic-image" alt="Small World Finder" >
+        <img src="images/jovian_5.jpeg" class="img-fluid dynamic-image" alt="Small World Finder" >
     </div>
-<h2 style="text-align: left;" class="text-light">About Title Here</h2>
-<p class="text-light">Stuff here</p>
-<ul>
-    <li class="text-light">Point 1</li>
-    <li class="text-light">Point 2</li>
-    <li class="text-light">Point 3</li>
-</ul>
+<div class="container-fluid md-12">
+    <h1 style="font-family: 'Times New Roman', Times, serif" class="text-light">Bio</h1>
+    <p class="my-text">In the midst of escalating divisions within United States politics, where partisan conflicts and cultural misunderstandings foster absurd rifts among citizens, Crescent Cross Covenant Coalition (CCCC) emerges as a path to unity. This initiative seeks to bridge the chasm between Christian and Muslim communities by exposing factual truths about Islam, free from biased propaganda or sensationalism. </p>
+    <br>
+    <p class="my-text">At its core, CCCC provides a dedicated platform for dialogue, reconciliation, and mutual understanding, enabling individuals from both faiths to address historical grievances and shared values. By fostering respectful exchanges and collaborative efforts, the coalition’s primary mission is to cultivate lasting peace, transforming potential adversaries into allies and promoting a harmonious society grounded in empathy and cooperation.</p>
+</div>
     </body>
+</html>
