--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+            <link href="fonts.googleapis.com" rel="stylesheet">
             <style>
                 body
                 {
-                    background-color: #5a636d
+                    background-color: #111214
                 }
                 .dynamic-image 
                 {
@@ -26,8 +30,8 @@
                 .my-text
                 {
                     color:antiquewhite;
-                    font-family: 'Times New Roman', Times, serif;
-                    font-size: 16px;
+                    font-family: 'Cinzel','Times New Roman', Times, serif;
+                    
                 }
             </style>
             <link rel="icon" href="images/iconlogo.png">
@@ -49,18 +53,19 @@
             </div>
         </div>
     </nav>-->
-    <div class="container-fluid md-12">
-        <img src="images/jovian_1.png" class="img-fluid dynamic-image" alt="Small World Finder" >
-        <img src="images/jovian_2.png" class="img-fluid dynamic-image" alt="Small World Finder" >
-        <img src="images/jovian_3.png" class="img-fluid dynamic-image" alt="Small World Finder" >
-        <img src="images/jovian_4.png" class="img-fluid dynamic-image" alt="Small World Finder" >
-        <img src="images/jovian_5.jpeg" class="img-fluid dynamic-image" alt="Small World Finder" >
+    <div class="container-fluid g-0">
+        <img src="images/jovian_1.png" class="img-fluid dynamic-image d-block" alt="Small World Finder" >
+        <img src="images/jovian_2.png" class="img-fluid dynamic-image d-block" alt="Small World Finder" >
+        <img src="images/jovian_3.png" class="img-fluid dynamic-image d-block" alt="Small World Finder" >
+        <img src="images/jovian_4.png" class="img-fluid dynamic-image d-block" alt="Small World Finder" >
+        <img src="images/jovian_5.jpeg" class="img-fluid dynamic-image d-block" alt="Small World Finder" >
     </div>
 <div class="container-fluid md-12">
-    <h1 style="font-family: 'Times New Roman', Times, serif" class="text-light">Bio</h1>
+    <h1 class="my-text">Bio</h1>
     <p class="my-text">In the midst of escalating divisions within United States politics, where partisan conflicts and cultural misunderstandings foster absurd rifts among citizens, Crescent Cross Covenant Coalition (CCCC) emerges as a path to unity. This initiative seeks to bridge the chasm between Christian and Muslim communities by exposing factual truths about Islam, free from biased propaganda or sensationalism. </p>
     <br>
     <p class="my-text">At its core, CCCC provides a dedicated platform for dialogue, reconciliation, and mutual understanding, enabling individuals from both faiths to address historical grievances and shared values. By fostering respectful exchanges and collaborative efforts, the coalition’s primary mission is to cultivate lasting peace, transforming potential adversaries into allies and promoting a harmonious society grounded in empathy and cooperation.</p>
+    <h3 class="my-text">Links</h3>
 </div>
     </body>
 </html>
